--- a/VRChat/66/1234566.html
+++ b/VRChat/66/1234566.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LguHiy8Yga4tDKCFq89V6xOUMPt1OofwBjWPU7pTLNk="></script>
+    "9cu3GpdEA+nmB1RiP8wjaaMGiYuEW7Hb5IyQLi2+BUQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"卵","description":"【卵】\n\nVRChat向け小物\n\nポリゴン数 1,卵割れ有り：1,080ポリゴン\n           2,卵半分ずつ：540ポリゴン\n\n何かの卵です。\n通常版と半分に割れた状態の物２つを入っています。\n通常版はシェイプーキーで割れた卵にする事が可能です。\n\n【内容】\n\n1.卵割れ有り.UnityPackage\n\n2.卵半分ずつ.UnityPackage\n\n3.卵各種使用の利用規約 readme.txt\n\n\n\n【注意事項】\n\n1.このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n2.過度なアダルト表現、グロテスクな表現等での使用は禁止致します。\n3.政治的利用、宗教的利用、誹謗中傷目的の作品への使用は禁止します。\n4.本モデル、改造モデルをゲーム、アニメーション、アプリに使用すること、またそれを用いた収益化活動での使用を許可致します。\n5.ただし、本製品の作者を偽ること、本製品の改造の有無に関わらず再配布および販売は禁止致します。\n6.良識の範囲でのご使用をお願い致します。\n7.予告なく規約変更、配布停止、使用禁止にする事があります。","url":"https://booth.pm/ja/items/1234566","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1ed4c1db-b9a3-45a8-9a20-fc0109c447fe/i/1234566/cf1eafa0-5163-4825-8ee8-c5d9ac38e26b_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LguHiy8Yga4tDKCFq89V6xOUMPt1OofwBjWPU7pTLNk="></script>
+    nonce="9cu3GpdEA+nmB1RiP8wjaaMGiYuEW7Hb5IyQLi2+BUQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1234566/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1234566/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
