--- a/VRChat/20/1234020.html
+++ b/VRChat/20/1234020.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qrQhw5x5ug02RHLYMQRTLOzgDUWIJ3lH1N7KjDBH87c="></script>
+    "gVIankK46G2qufi7GOC2rDWlhZo2GxhrMxnqu/x8ERs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け_トラバサミ","description":"VRChat向けと書いてますが、基本ご自由にお使いください。\n\n※ただし、二次配布、自作発言、はお止めください。\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n\n【使い方】\ntorabasami2とtorabasami3を回転させトラバサミを閉じることができます。（３枚目の画像を参照）\n\n回転させる際ワールド回転になっているかの確認をお願いします。（４枚目の画像を参照）\n\nテクスチャは入っていないので、シェーダーでメタリックや金属風にするなどをしてお使いください。","url":"https://booth.pm/ja/items/1234020","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/521730e0-f768-4371-b0ec-397b8f2b0bb4/i/1234020/beec38d1-ed3f-4977-bb93-33a4959629a3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qrQhw5x5ug02RHLYMQRTLOzgDUWIJ3lH1N7KjDBH87c="></script>
+    nonce="gVIankK46G2qufi7GOC2rDWlhZo2GxhrMxnqu/x8ERs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1234020/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               211
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1234020/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               211
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
