--- a/VRChat/16/1089916.html
+++ b/VRChat/16/1089916.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uG8oCOy2WK20YfCa6L1LM/SqQi1+tLtKhbxSiaOxLYc="></script>
+    "/Xpx+Yors6ekphBLztrUxG0WmctwztEwc6oNtUkIy1c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクセル武器三種(おまけ付)","description":"VRChatでの使用を想定して作成したボクセルモデルです。\nVRChat以外での使用も可能です。\n\n※おまけ(魔法陣)は有料版のみに付属。","url":"https://booth.pm/ja/items/1089916","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/f35b6625-4d3e-4bc1-b269-467158fdeb3e/i/1089916/e62a1e25-b5c0-44af-91e5-be9f37f5ea82_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uG8oCOy2WK20YfCa6L1LM/SqQi1+tLtKhbxSiaOxLYc="></script>
+    nonce="/Xpx+Yors6ekphBLztrUxG0WmctwztEwc6oNtUkIy1c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1089916/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               30
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1089916/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               30
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
