--- a/VRChat/81/1214581.html
+++ b/VRChat/81/1214581.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pFOyGqUzt0uB5iEGL9jLURTqZkhAkTHxvaNqAb4yOcw="></script>
+    "jzNX+S9DX0vOzyXYKi4KB5198nQMc1hTvhtrIMeZq4E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat【3Dmodel】さくら ~試作Armorバージョン~","description":"2019/03/11　追記\nダウンロードし、パスワードを入れないと解凍ができないというご指摘を頂きました。\n再度ロックを外したものをＵＰ致しましたので、大変お手数では御座いますが、再ダウンロード頂けると幸いです\n何卒、宜しくお願い致します\n\n\n本モデルはUnityのHumanoid形式に対応したオリジナルモデル　『　さくら　』　です。\n主にVRChatでの使用を想定しています。\n\nVRCSDKを事前にインポートして下さい。\n\n・シェーダーは、ユニティちゃんトゥーンシェーダーを使用しております。（2.0 / UTS2 v.2.0.5）\nhttp://unity-chan.com/download/releaseNote.php?id=UTS2_0\n(c)Unity Technologies Japan/UCL\n・リアル質感のシェーダーは設定してありますが、顔についてはリアルテイストなテクスチャは用意しておりません。\nルックが気になる方は、ヘルメット着用したままの状態でご利用下さい。\n・３Dソフトはmayaを使用しております。他ソフトで編集する際の完全な互換は保障いたしかねます。\n・VRChatにアップロードする手順等は各自ご確認いただけると幸いです。\n\n■■■内容■■■\n・ポリゴン数　フルセット　45342\n・瞬きの仕込あり（アイトラッキングは未対応です）\n・フルトラッキング確認済み\n・リップシンクターゲットあり\n\n■■■同梱データ■■■\nUnityパッケージファイル\n\n\n■■■禁止事項■■■\n・本モデルの著作権は、本モデル製作者　AJISAI　に帰属するものとします。\n\n・利用者は本データの改造、改変は自由に行うことができますが、作成者は本データの改変物について、著作権を専有し、改変物にも本規約は適用されます。\n\n・本データの再配布、販売は改変の有無を問わず禁止します。\n\n・公序良俗に反する行為や目的、政治・宗教活動、他者に対する誹謗中傷目的での使用は禁止です\n\n・他人が不快に感じる表現や用途への使用\n\n・過度なR18/R18G表現への使用\n\n・モデルの再配布は厳禁です。VRChatでパブリック化するのもお控えください。\n\n・本モデルデータを使用することによって何らかのトラブル・損失及び損害等が発生した場合でも当方は一切の責任を負いません。\n\n・営利/非営利問わずご利用いただけます。(要クレジット記載)\n\n本モデルの使用は使用者の責任において行ってください。\nご不明な点や曖昧な点などございましたらお気軽にお尋ねください。","url":"https://booth.pm/ja/items/1214581","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/c0219cf5-8754-4097-a016-0ddf2341fc76/i/1214581/e1705308-01c4-4552-a8f0-893c0ae87ca6_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pFOyGqUzt0uB5iEGL9jLURTqZkhAkTHxvaNqAb4yOcw="></script>
+    nonce="jzNX+S9DX0vOzyXYKi4KB5198nQMc1hTvhtrIMeZq4E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -144,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +157,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -199,7 +199,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1214581/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               153
@@ -214,14 +214,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1214581/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               153
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
